--- a/local/gutter-services-darrington.html
+++ b/local/gutter-services-darrington.html
@@ -8,7 +8,7 @@
 
 <link rel="canonical" href="https://homerepairs4u.com/local/gutter-services-darrington.html">
 
-<meta name="description" content="Local gutter clearing, cleaning, repairs and replacement in Darrington, Doncaster. Reliable service to protect your property. Call 07735 873694.">
+<meta name="description" content="Professional gutter clearing, cleaning, repairs and replacement in Darrington, Doncaster. Reliable local service. Call 07735 873694.">
 
 <link rel="icon" href="/favicon.png" type="image/png">
 <link rel="preload" as="image" href="/images/logo.webp">
@@ -28,7 +28,10 @@ input[type="number"]{width:100%;padding:12px;font-size:16px;margin-bottom:18px;}
 .form-row input{width:22px;height:22px;}
 button{cursor:pointer;min-height:48px;}
 button:focus,a:focus,input:focus{outline:3px solid #27ae60;outline-offset:2px;}
-.service-image{width:100%;max-width:900px;display:block;margin:28px auto;border-radius:6px;}
+.service-image{width:100%;max-width:900px;display:block;margin:28px auto;border-radius:6px;cursor:pointer;}
+.lightbox{display:none;position:fixed;z-index:9999;top:0;left:0;width:100%;height:100%;background:rgba(0,0,0,0.85);align-items:center;justify-content:center;}
+.lightbox img{max-width:95%;max-height:95%;border-radius:6px;box-shadow:0 0 25px #000;}
+.lightbox:target{display:flex;}
 footer{background:#000;color:#fff;text-align:center;padding:28px 15px;margin-top:40px;font-size:14px;}
 #quoteResult ul{padding-left:22px;}
 .breadcrumbs{font-size:14px;margin-bottom:18px;color:#000;}
@@ -62,11 +65,11 @@ footer{background:#000;color:#fff;text-align:center;padding:28px 15px;margin-top
 "@type":"PostalAddress",
 "addressLocality":"Darrington",
 "addressRegion":"South Yorkshire",
-"postalCode":"WF8",
+"postalCode":"DN6",
 "addressCountry":"GB"
 },
 "openingHours":"Mo-Su 07:00-20:00",
-"areaServed":["Darrington","Pontefract","Doncaster","West Yorkshire"]
+"areaServed":["Darrington","Askern","Campsall","Doncaster"]
 }
 </script>
 
@@ -89,11 +92,11 @@ Home <span>›</span> Guttering Services <span>›</span> <strong>Darrington, Do
 <h1>Gutter Services in Darrington, Doncaster</h1>
 
 <p>
-Home Repairs 4U delivers reliable gutter maintenance and repair services for homes in Darrington. Gutters are an essential part of a property’s drainage system, quietly managing rainwater and helping protect walls, roofs, and foundations from damage.
+Home Repairs 4U provides dependable gutter services for homes in Darrington. Gutters quietly protect your property by directing rainwater away from walls, roofs, and foundations. When they fail, moisture can build up quickly and lead to avoidable repairs.
 </p>
 
 <p>
-In Darrington, properties are often exposed to open surroundings, seasonal rainfall, and wind-driven debris. These conditions make regular gutter maintenance especially important to prevent overflow, staining, and gradual structural deterioration.
+Darrington’s mix of open land and residential streets means properties are exposed to wind-blown debris and seasonal leaf fall. Without regular care, gutters can become blocked or misaligned, affecting their performance during heavy rainfall.
 </p>
 
 <h2>Instant Gutter Quote Calculator</h2>
@@ -145,63 +148,78 @@ items.length
 }
 </script>
 
-<h2>Understanding Gutter Wear in Darrington</h2>
+<h2>Gutter Care for Darrington Properties</h2>
 
 <p>
-Gutters in Darrington properties are subject to a combination of weather exposure and natural debris. Over time, small issues such as minor blockages or misaligned sections can develop into larger problems if left unchecked.
+Properties in Darrington often experience quicker debris build-up due to nearby trees and open spaces. Leaves, moss, and wind-driven debris can accumulate inside gutters, restricting water flow and placing strain on gutter brackets.
 </p>
 
 <p>
-Routine maintenance allows problems to be identified early, reducing the likelihood of water damage and helping maintain the overall condition of the property.
+Regular gutter maintenance ensures rainwater drains correctly and helps protect brickwork, rooflines, and foundations from prolonged moisture exposure.
 </p>
 
 <h2>Our Gutter Services</h2>
 
 <h3>Gutter Clearing</h3>
 <p>
-Internal clearing removes leaves, moss, and sediment that prevent water from flowing freely through the gutter system.
+Clearing removes debris from inside the gutter system, restoring efficient drainage and reducing overflow risks.
 </p>
 
-<img src="/images/clearing-service.webp" alt="Gutter clearing carried out on a home in Darrington" class="service-image">
+<a href="#clearing-lightbox">
+<img src="/images/clearing-service.webp" alt="Gutter clearing carried out on a Darrington property" class="service-image">
+</a>
+<div id="clearing-lightbox" class="lightbox">
+<a href="#"><img src="/images/clearing-service.webp" alt=""></a>
+</div>
 
 <h3>Gutter Cleaning</h3>
 <p>
-External cleaning removes staining and surface build-up, improving appearance and helping gutters dry efficiently after rainfall.
+External cleaning removes staining and algae, improving appearance and helping gutters dry quickly after rainfall.
 </p>
 
-<img src="/images/cleaned-gutters.webp" alt="Gutters cleaned on a Darrington property" class="service-image">
+<a href="#cleaning-lightbox">
+<img src="/images/cleaned-gutters.webp" alt="External gutter cleaning on a Darrington home" class="service-image">
+</a>
+<div id="cleaning-lightbox" class="lightbox">
+<a href="#"><img src="/images/cleaned-gutters.webp" alt=""></a>
+</div>
 
-<h3>Gutter Repairs and Replacement</h3>
+<h3>Gutter Repairs & Replacement</h3>
 <p>
-Where guttering is damaged or worn beyond repair, replacement provides a long-term solution using modern materials suited to local conditions.
+Damaged or ageing guttering can be repaired or replaced to ensure reliable water management and long-term protection.
 </p>
 
-<img src="/images/replaced-gutter.webp" alt="New gutter replacement installed on a Darrington home" class="service-image">
+<a href="#replacement-lightbox">
+<img src="/images/replaced-gutter.webp" alt="Gutter replacement installed on a Darrington property" class="service-image">
+</a>
+<div id="replacement-lightbox" class="lightbox">
+<a href="#"><img src="/images/replaced-gutter.webp" alt=""></a>
+</div>
 
-<h2>Serving Darrington and Nearby Areas</h2>
+<h2>Nearby Areas We Cover</h2>
 
 <p class="internal-links">
-In addition to Darrington, Home Repairs 4U also provides gutter services in nearby locations including
+Home Repairs 4U also provides gutter services in nearby areas such as
 <a href="/local/gutter-services-askern.html">Askern</a>,
 <a href="/local/gutter-services-campsall.html">Campsall</a>, and
-<a href="/local/gutter-services-carcroft.html">Carcroft</a>.
-This local coverage allows us to respond efficiently and understand the varying property types across the area.
+<a href="/local/gutter-services-burghwallis.html">Burghwallis</a>.
+This local coverage ensures prompt service and knowledge of the surrounding area.
 </p>
 
 <h2>Why Choose Home Repairs 4U</h2>
 
 <ul>
-<li>Experience with local housing styles</li>
-<li>Clear, honest assessments</li>
-<li>Safe working methods</li>
+<li>Experience with village and residential properties</li>
+<li>Clear communication and advice</li>
+<li>Safe working practices</li>
 <li>Transparent pricing</li>
-<li>Dependable local service</li>
+<li>Reliable local service</li>
 </ul>
 
 <h2>Book Gutter Services in Darrington</h2>
 
 <p>
-If your gutters are leaking, blocked, or showing signs of wear, Home Repairs 4U is ready to help. Use the calculator above or contact us directly to arrange an inspection.
+If your gutters are blocked, leaking, or due for maintenance, Home Repairs 4U is ready to help. Use the calculator above or contact us directly to arrange a visit.
 </p>
 
 <div style="text-align:center;margin:40px 0;">
