--- a/index.html
+++ b/index.html
@@ -298,20 +298,29 @@ loading="lazy">
 </main>
 
 <footer>
-<p>© Home Repairs 4U – Askern DN6</p>
-<p>Exterior Decorating • Fence Installation • Garden Maintenance • Gutter Replacement • Pressure Washing • uPVC Restoration</p>
 <p>📞 Call 07735 873694</p>
+<footer style="background:#000; color:#fff; text-align:center; padding:28px 15px; font-size:14px;">
+<div>
+© Home Repairs 4U | Service Areas, Doncaster
+<br><br>
 
-<p style="margin-top:16px;">
-<a href="/services/exterior-decorating.html" style="color:white; margin:0 8px;">Exterior Decorating</a>
-<a href="/services/fence-installation.html" style="color:white; margin:0 8px;">Fence Installation</a>
-<a href="/services/garden.html" style="color:white; margin:0 8px;">Garden</a>
-<a href="/services/guttering.html" style="color:white; margin:0 8px;">Guttering</a>
-<a href="/services/pressure-washing.html" style="color:white; margin:0 8px;">Pressure Washing</a>
-<a href="/services/upvc-restoration.html" style="color:white; margin:0 8px;">uPVC Restoration</a>
-<p>
-<a href="https://www.facebook.com/people/Handyman-services/61584395621256/" style="color:white; margin:0 8px;">Facebook</a>
-</p>
+<a href="/services/guttering.html" style="color:#fff; text-decoration:underline; margin:0 6px;">Guttering</a> |
+<a href="/services/pressure-washing.html" style="color:#fff; text-decoration:underline; margin:0 6px;">Pressure Washing</a> |
+<a href="/services/fence-installation.html" style="color:#fff; text-decoration:underline; margin:0 6px;">Fencing</a> |
+<a href="/services/upvc-restoration.html" style="color:#fff; text-decoration:underline; margin:0 6px;">uPVC Restoration</a> |
+<a href="/services/service-areas.html" style="color:#fff; text-decoration:underline; margin:0 6px;">Service Areas</a>
+
+<br><br>
+
+<a href="https://www.facebook.com/people/Handyman-services/61584395621256/"
+target="_blank"
+rel="noopener"
+style="color:#fff; text-decoration:underline;">
+Facebook
+</a>
+</div>
+
+
 </footer>
 
 </body>
