--- a/services/guttering.html
+++ b/services/guttering.html
@@ -243,18 +243,29 @@ For fast, friendly and professional gutter cleaning, clearing or replacement, co
 </main>
 
 <footer>
-© Home Repairs 4U | Gutter Replacement • Cleaning • Clearing | Askern DN6 | Call 07735 873694
-  <footer style="background-color: black; padding: 20px; text-align: center;">
-<p style="color: white;">Our Services:</p>
-<a href="/services/Exterior-decorating.html" style="color: white; margin: 0 10px;">Exterior Decorating</a>
-<a href="/services/fence-installation.html" style="color: white; margin: 0 10px;">Fence Installation</a>
-<a href="/services/garden.html" style="color: white; margin: 0 10px;">Garden</a>
-<a href="/services/Pressure-washing.html" style="color: white; margin: 0 10px;">Pressure Washing</a>
-<a href="/services/upvc-restoration.html" style="color: white; margin: 0 10px;">uPVC Restoration</a>
+<p>📞 Call 07735 873694</p>
+<footer style="background:#000; color:#fff; text-align:center; padding:28px 15px; font-size:14px;">
+<div>
+© Home Repairs 4U | Service Areas, Doncaster
+<br><br>
+
+<a href="/services/guttering.html" style="color:#fff; text-decoration:underline; margin:0 6px;">Guttering</a> |
+<a href="/services/pressure-washing.html" style="color:#fff; text-decoration:underline; margin:0 6px;">Pressure Washing</a> |
+<a href="/services/fence-installation.html" style="color:#fff; text-decoration:underline; margin:0 6px;">Fencing</a> |
+<a href="/services/upvc-restoration.html" style="color:#fff; text-decoration:underline; margin:0 6px;">uPVC Restoration</a> |
+<a href="/services/service-areas.html" style="color:#fff; text-decoration:underline; margin:0 6px;">Service Areas</a>
+
+<br><br>
+
+<a href="https://www.facebook.com/people/Handyman-services/61584395621256/"
+target="_blank"
+rel="noopener"
+style="color:#fff; text-decoration:underline;">
+Facebook
+</a>
+</div>
 </footer>
-<p>
-<a href="https://www.facebook.com/people/Handyman-services/61584395621256/" style="color:white; margin:0 8px;">Facebook</a>
-</p>
+
 
 </body>
 </html>
