--- a/local/gutter-services-askern.html
+++ b/local/gutter-services-askern.html
@@ -243,13 +243,27 @@ If your gutters are leaking, overflowing, or overdue for attention, Home Repairs
 </main>
 
 <footer>
-© Home Repairs 4U | Gutter Services Askern, Doncaster
-<br>
-<a href="/services/guttering.html">Guttering</a>
-<a href="/services/fence-installation.html">Fencing</a>
-<a href="/services/upvc-restoration.html">uPVC Restoration</a>
-<br>
-<a href="https://www.facebook.com/people/Handyman-services/61584395621256/">Facebook</a>
+<p>📞 Call 07735 873694</p>
+<footer style="background:#000; color:#fff; text-align:center; padding:28px 15px; font-size:14px;">
+<div>
+© Home Repairs 4U | Service Areas, Doncaster
+<br><br>
+
+<a href="/services/guttering.html" style="color:#fff; text-decoration:underline; margin:0 6px;">Guttering</a> |
+<a href="/services/pressure-washing.html" style="color:#fff; text-decoration:underline; margin:0 6px;">Pressure Washing</a> |
+<a href="/services/fence-installation.html" style="color:#fff; text-decoration:underline; margin:0 6px;">Fencing</a> |
+<a href="/services/upvc-restoration.html" style="color:#fff; text-decoration:underline; margin:0 6px;">uPVC Restoration</a> |
+<a href="/services/service-areas.html" style="color:#fff; text-decoration:underline; margin:0 6px;">Service Areas</a>
+
+<br><br>
+
+<a href="https://www.facebook.com/people/Handyman-services/61584395621256/"
+target="_blank"
+rel="noopener"
+style="color:#fff; text-decoration:underline;">
+Facebook
+</a>
+</div>
 </footer>
 
 </body>
