--- a/local/gutter-services-askern.html
+++ b/local/gutter-services-askern.html
@@ -137,12 +137,12 @@ Askern properties are exposed to seasonal rainfall, falling leaves, moss growth,
 
 <div class="form-row">
 <input type="checkbox" id="clearing">
-<label for="clearing">Gutter clearing</label>
+<label for="clearing">Gutter clearing inside gutters</label>
 </div>
 
 <div class="form-row">
 <input type="checkbox" id="cleaning">
-<label for="cleaning">Gutter cleaning</label>
+<label for="cleaning">Gutter cleaning external side</label>
 </div>
 
 <div class="form-row">
