--- a/services/service-areas.html
+++ b/services/service-areas.html
@@ -88,10 +88,29 @@ Select your location above or visit our main services pages for more information
 </main>
 
 <footer>
-© Home Repairs 4U | Service Areas, Doncaster
-<br>
-<a href="/services/guttering.html">Guttering</a> | <a href="/services/pressure-washing.html">Pressure Washing</a> | <a href="/services/fence-installation.html">Fencing</a> | <a href="/services/upvc-restoration.html">uPVC Restoration</a>
-</footer>
+<footer style="background:#000;color:#fff;text-align:center;padding:26px 15px;font-size:14px;">
 
+<p style="margin:0 0 10px;">
+© Home Repairs 4U | Doncaster
+</p>
+
+<nav>
+<a href="/services/guttering.html">Guttering</a> |
+<a href="/services/pressure-washing.html">Pressure Washing</a> |
+<a href="/services/fence-installation.html">Fencing</a> |
+<a href="/services/upvc-restoration.html">uPVC Restoration</a>
+</nav>
+
+<nav style="margin-top:10px;">
+<a href="/service-areas-guttering.html">Guttering Service Areas</a>
+</nav>
+
+<nav style="margin-top:10px;">
+<a href="https://www.facebook.com/people/Handyman-services/61584395621256/" target="_blank" rel="noopener">
+Facebook
+</a>
+</nav>
+
+</footer>
 </body>
 </html>
