--- a/services/service-areas.html
+++ b/services/service-areas.html
@@ -88,7 +88,7 @@ Select your location above or visit our main services pages for more information
 </main>
 
 <footer>
-<footer style="background:#000;color:#fff;text-align:center;padding:26px 15px;font-size:14px;">
+<footer style="background:#fff;color:#000;text-align:center;padding:26px 15px;font-size:14px;">
 
 <p style="margin:0 0 10px;">
 © Home Repairs 4U | Doncaster
