--- a/services/service-areas.html
+++ b/services/service-areas.html
@@ -23,7 +23,7 @@ ul{list-style:none;padding-left:0;}
 li{margin-bottom:12px;}
 a{color:#000;text-decoration:underline;}
 a:hover{text-decoration:none;}
-footer{background:#000;color:#fff;text-align:center;padding:28px 15px;margin-top:40px;font-size:14px;}
+footer{background:#fff;color:#000;text-align:center;padding:28px 15px;margin-top:40px;font-size:14px;}
 </style>
 </head>
 <body>
