--- a/services/guttering.html
+++ b/services/guttering.html
@@ -218,7 +218,7 @@ If you're unsure whether we cover your location, the answer is almost always yes
 <li>✔ Skilled, careful, respectful workmanship</li>
 </ul>
 
-<h2>Long-Form Service Overview (SEO Enhanced)</h2>
+<h2>Service Overview</h2>
 <p>
 Water damage caused by poorly maintained guttering is one of the most common and expensive issues experienced by homeowners. When gutters overflow, water runs directly into brickwork, foundations and rooflines. Over time, this creates damp patches inside the home, encourages mould growth and weakens structures. Many customers contact us only once interior symptoms appear, but these can take months to develop. Early maintenance prevents all of this.
 </p>
