--- a/test.html
+++ b/test.html
@@ -1,1 +1,217 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+<meta charset="utf-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
 
+<title>Gutter Services in Kirk Sandall, Doncaster | Home Repairs 4U</title>
+
+<link rel="canonical" href="https://homerepairs4u.com/test.html">
+
+<meta name="description" content="Professional gutter clearing, cleaning, repairs and replacement in Kirk Sandall, Doncaster. Local, reliable service helping prevent leaks, damp and water damage. Call 07735 873694.">
+
+<link rel="icon" href="/favicon.png" type="image/png">
+<link rel="preload" as="image" href="/images/logo.webp">
+
+<style>
+html{-webkit-text-size-adjust:100%;}
+body{margin:0;font-family:Arial,sans-serif;background:#f8f8f8;color:#222;line-height:1.65;}
+header{background:#fff;padding:26px 12px;text-align:center;border-bottom:4px solid #27ae60;}
+.logo{max-height:90px;width:auto;}
+.call-btn{display:inline-block;margin-top:18px;padding:15px 30px;background:#000;color:#fff;font-size:19px;font-weight:bold;text-decoration:none;border-radius:6px;min-height:48px;}
+.call-btn:hover{background:#333;}
+main{max-width:950px;margin:0 auto;background:#fff;padding:28px 18px;}
+h1,h2,h3{color:#111;}
+label{font-weight:bold;display:block;margin-bottom:6px;}
+input[type="number"]{width:100%;padding:12px;font-size:16px;margin-bottom:18px;}
+.form-row{display:flex;align-items:center;gap:14px;padding:12px 10px;margin-bottom:12px;}
+.form-row input{width:22px;height:22px;}
+button{cursor:pointer;min-height:48px;}
+button:focus,a:focus,input:focus{outline:3px solid #27ae60;outline-offset:2px;}
+.service-image{width:100%;max-width:900px;display:block;margin:22px auto;border-radius:6px;}
+.lightbox{display:none;position:fixed;z-index:9999;top:0;left:0;width:100%;height:100%;background:rgba(0,0,0,0.85);align-items:center;justify-content:center;}
+.lightbox img{max-width:95%;max-height:95%;border-radius:6px;box-shadow:0 0 25px #000;}
+.lightbox:target{display:flex;}
+.breadcrumbs{font-size:14px;color:#000;margin-bottom:18px;}
+footer{background:#000;color:#fff;text-align:center;padding:26px 15px;margin-top:40px;font-size:14px;}
+footer a{color:#fff;text-decoration:none;padding:8px 12px;display:inline-block;}
+</style>
+
+<!-- Local Business Schema -->
+<script type="application/ld+json">
+{
+"@context":"https://schema.org",
+"@type":"HomeAndConstructionBusiness",
+"name":"Home Repairs 4U",
+"url":"https://homerepairs4u.com/",
+"logo":"https://homerepairs4u.com/images/logo.webp",
+"telephone":"+447735873694",
+"openingHours":"Mo-Su 07:00-20:00",
+"priceRange":"£50–£3000",
+"areaServed":{
+"@type":"Place",
+"name":"Kirk Sandall, Doncaster"
+}
+}
+</script>
+
+<!-- FAQ Schema -->
+<script type="application/ld+json">
+{
+"@context":"https://schema.org",
+"@type":"FAQPage",
+"mainEntity":[
+{
+"@type":"Question",
+"name":"How often should gutters be cleared in Kirk Sandall?",
+"acceptedAnswer":{"@type":"Answer","text":"Most properties benefit from gutter clearing once or twice per year, particularly after autumn and winter when debris builds up quickly."}
+},
+{
+"@type":"Question",
+"name":"Do blocked gutters cause damp problems?",
+"acceptedAnswer":{"@type":"Answer","text":"Yes. Overflowing gutters can allow water to soak into walls, brickwork and foundations, leading to damp patches and long-term damage."}
+},
+{
+"@type":"Question",
+"name":"Do you provide gutter replacement in Kirk Sandall?",
+"acceptedAnswer":{"@type":"Answer","text":"Yes. We repair where possible and offer full gutter replacement when systems are beyond repair, using durable materials designed for long-term reliability."}
+}
+]
+}
+</script>
+
+<!-- Breadcrumb Schema -->
+<script type="application/ld+json">
+{
+"@context":"https://schema.org",
+"@type":"BreadcrumbList",
+"itemListElement":[
+{"@type":"ListItem","position":1,"name":"Home"},
+{"@type":"ListItem","position":2,"name":"Guttering Services"},
+{"@type":"ListItem","position":3,"name":"Kirk Sandall"}
+]
+}
+</script>
+
+</head>
+<body>
+
+<header>
+<img src="/images/logo.webp" alt="Home Repairs 4U logo" class="logo" width="600" height="200">
+<br>
+<a href="/" style="font-size:20px;font-weight:600;color:#000;">Home</a><br>
+<a href="tel:07735873694" class="call-btn">Call 07735 873694</a>
+</header>
+
+<main>
+
+<div class="breadcrumbs">
+Home › Guttering Services › Kirk Sandall
+</div>
+
+<h1>Gutter Services Near Me in Kirk Sandall, Doncaster</h1>
+
+<p>
+If you’re searching for reliable gutter services near you in Kirk Sandall, Home Repairs 4U provides professional gutter clearing, cleaning, repairs and replacement for residential and small commercial properties. Our local service focuses on protecting homes from water damage, damp issues and unnecessary repair costs caused by blocked or failing guttering.
+</p>
+
+<p>
+Gutters play a vital role in directing rainwater safely away from your property. When systems become blocked, misaligned or damaged, water can overflow and soak into walls, rooflines and foundations. Over time, this can lead to staining, damp patches, rot and costly structural repairs. Regular maintenance is the most effective way to avoid these issues.
+</p>
+
+<h2>Instant Gutter Quote Calculator</h2>
+
+<form id="quoteForm">
+<label for="metres">Total gutter length (metres)</label>
+<input type="number" id="metres" min="1" step="0.1" required>
+
+<div class="form-row">
+<input type="checkbox" id="clearing">
+<label for="clearing">Gutter clearing</label>
+</div>
+
+<div class="form-row">
+<input type="checkbox" id="cleaning">
+<label for="cleaning">Gutter cleaning</label>
+</div>
+
+<div class="form-row">
+<input type="checkbox" id="replacement">
+<label for="replacement">Gutter replacement</label>
+</div>
+
+<button type="button" onclick="calculateQuote()" class="call-btn">Get Estimate</button>
+</form>
+
+<div id="quoteResult" style="margin-top:22px;font-size:18px;font-weight:bold;"></div>
+
+<script>
+function calculateQuote(){
+const m=parseFloat(document.getElementById('metres').value);
+if(!m||m<=0){alert("Please enter a valid length.");return;}
+let total=0;
+let items=[];
+if(clearing.checked){let p=m*5;total+=p;items.push(`Gutter clearing: £${p.toFixed(2)}`);}
+if(cleaning.checked){let p=m*5;total+=p;items.push(`Gutter cleaning: £${p.toFixed(2)}`);}
+if(replacement.checked){let p=m*21.5;total+=p;items.push(`Gutter replacement: £${p.toFixed(2)}`);}
+document.getElementById("quoteResult").innerHTML=
+items.length
+? `<ul>${items.map(i=>`<li>${i}</li>`).join("")}</ul><p><strong>Estimated total: £${total.toFixed(2)}</strong></p>`
+: "<p>Please select at least one service.</p>";
+}
+</script>
+
+<h2>Our Gutter Services in Kirk Sandall</h2>
+
+<h3>Gutter Clearing</h3>
+<p>
+Leaves, moss and debris can accumulate quickly, especially in residential areas with nearby trees. Our gutter clearing service removes blockages to restore proper water flow and reduce the risk of overflow during heavy rainfall.
+</p>
+
+<h3>Gutter Cleaning</h3>
+<p>
+External gutter cleaning helps improve kerb appeal while also preventing surface deterioration. Removing algae and grime allows gutters to dry correctly and can extend their usable lifespan.
+</p>
+
+<h3>Gutter Repairs and Replacement</h3>
+<p>
+Small issues such as leaking joints or sagging sections can often be repaired if caught early. Where systems are damaged beyond repair, we offer full gutter replacement using robust materials designed for long-term performance.
+</p>
+
+<h2>Why Local Gutter Maintenance Matters</h2>
+
+<p>
+Properties in Kirk Sandall experience a mix of seasonal rainfall and temperature changes that place constant pressure on gutter systems. Regular inspections and maintenance help ensure your property remains protected year-round, reducing the likelihood of sudden leaks or water ingress.
+</p>
+
+<p>
+We also serve surrounding areas including
+<a href="/local/gutter-services-bentley.html">Bentley</a>,
+<a href="/local/gutter-services-askern.html">Askern</a> and
+<a href="/local/gutter-services-darrington.html">Darrington</a>, allowing us to provide prompt local support when needed.
+</p>
+
+<h2>Book Gutter Services in Kirk Sandall</h2>
+
+<p>
+Whether your gutters need clearing, cleaning, repair or full replacement, Home Repairs 4U offers dependable local service you can trust. We focus on practical solutions, clear pricing and workmanship that protects your home.
+</p>
+
+<div style="text-align:center;margin:36px 0;">
+<a href="tel:07735873694" class="call-btn">Call 07735 873694</a>
+</div>
+
+</main>
+
+<footer>
+© Home Repairs 4U | Gutter Services Kirk Sandall, Doncaster
+<br>
+<a href="/services/guttering.html">Guttering</a>
+<a href="/services/pressure-washing.html">Pressure Washing</a>
+<a href="/services/fence-installation.html">Fencing</a>
+<br>
+<a href="https://www.facebook.com/people/Handyman-services/61584395621256/">Facebook</a>
+</footer>
+
+</body>
+</html>
