--- a/test.html
+++ b/test.html
@@ -209,6 +209,7 @@ Whether your gutters need clearing, cleaning, repair or full replacement, Home R
 <a href="/services/guttering.html">Guttering</a>
 <a href="/services/pressure-washing.html">Pressure Washing</a>
 <a href="/services/fence-installation.html">Fencing</a>
+<a href="/services/fence-installation.html">Fencing</a>
 <br>
 <a href="https://www.facebook.com/people/Handyman-services/61584395621256/">Facebook</a>
 </footer>
