--- a/test.html
+++ b/test.html
@@ -37,21 +37,32 @@ footer{background:#000;color:#fff;text-align:center;padding:26px 15px;margin-top
 footer a{color:#fff;text-decoration:none;padding:8px 12px;display:inline-block;}
 </style>
 
-<!-- Local Business Schema -->
-<script type="application/ld+json">
-{
-"@context":"https://schema.org",
-"@type":"HomeAndConstructionBusiness",
-"name":"Home Repairs 4U",
-"url":"https://homerepairs4u.com/",
-"logo":"https://homerepairs4u.com/images/logo.webp",
-"telephone":"+447735873694",
-"openingHours":"Mo-Su 07:00-20:00",
-"priceRange":"£50–£3000",
-"areaServed":{
-"@type":"Place",
-"name":"Kirk Sandall, Doncaster"
-}
+</script>
+
+
+</script>
+
+"@type": "LocalBusiness",
+"name": "Home Repairs 4U",
+"url": "homerepairs4u.com",
+"telephone": "+447735873694",
+"areaServed": {
+"@type": "GeoCircle",
+"geoMidpoint": {
+"@type": "GeoCoordinates",
+"latitude": 53.56526,
+"longitude": -1.073704
+},
+"geoRadius": "10000"
+},
+"address": {
+"@type": "PostalAddress",
+"addressLocality": "Kirk Sandall",
+"addressRegion": "South Yorkshire",
+"postalCode": "DN3",
+"addressCountry": "GB"
+},
+"openingHours": "Mo-Su 07:00-20:00"
 }
 </script>
 
