--- a/test.html
+++ b/test.html
@@ -41,7 +41,10 @@ footer a{color:#fff;text-decoration:none;padding:8px 12px;display:inline-block;}
 
 
 </script>
-
+<!-- LocalBusiness Schema -->
+<script type="application/ld+json">
+{
+"@context":"https://schema.org",
 "@type": "LocalBusiness",
 "name": "Home Repairs 4U",
 "url": "homerepairs4u.com",
