--- a/test.html
+++ b/test.html
@@ -46,6 +46,8 @@ footer a{color:#fff;text-decoration:none;padding:8px 12px;display:inline-block;}
 "@type": "LocalBusiness",
 "name": "Home Repairs 4U",
 "url": "homerepairs4u.com",
+"logo": "homerepairs4u.com/images/logo.webp",
+"image": "homerepairs4u.com/images/logo.webp", 
 "telephone": "+447735873694",
 "areaServed": {
 "@type": "GeoCircle",
