--- a/test.html
+++ b/test.html
@@ -49,6 +49,7 @@ footer a{color:#fff;text-decoration:none;padding:8px 12px;display:inline-block;}
 "logo": "homerepairs4u.com/images/logo.webp",
 "image": "homerepairs4u.com/images/logo.webp", 
 "telephone": "+447735873694",
+"priceRange": "£40-£1800",
 "areaServed": {
 "@type": "GeoCircle",
 "geoMidpoint": {
