--- a/test.html
+++ b/test.html
@@ -4,14 +4,13 @@
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 
-<title>Gutter Services in Kirk Sandall, Doncaster | Home Repairs 4U</title>
+<title>Gutter Services in Kirk Sandall, Doncaster | Clearing, Cleaning & Replacement</title>
 
-<link rel="canonical" href="https://homerepairs4u.com/test.html">
+<link rel="canonical" href="https://homerepairs4u.com/local/gutter-services-kirk-sandall.html">
 
-<meta name="description" content="Professional gutter clearing, cleaning, repairs and replacement in Kirk Sandall, Doncaster. Local, reliable service helping prevent leaks, damp and water damage. Call 07735 873694.">
+<meta name="description" content="Professional gutter clearing, cleaning, repairs and replacement in Kirk Sandall, Doncaster. Reliable local service to prevent damp and water damage. Call 07735 873694.">
 
 <link rel="icon" href="/favicon.png" type="image/png">
-<link rel="preload" as="image" href="/images/logo.webp">
 
 <style>
 html{-webkit-text-size-adjust:100%;}
@@ -20,99 +19,94 @@ header{background:#fff;padding:26px 12px;text-align:center;border-bottom:4px sol
 .logo{max-height:90px;width:auto;}
 .call-btn{display:inline-block;margin-top:18px;padding:15px 30px;background:#000;color:#fff;font-size:19px;font-weight:bold;text-decoration:none;border-radius:6px;min-height:48px;}
 .call-btn:hover{background:#333;}
-main{max-width:950px;margin:0 auto;background:#fff;padding:28px 18px;}
+main{max-width:980px;margin:0 auto;background:#fff;padding:30px 20px;}
 h1,h2,h3{color:#111;}
-label{font-weight:bold;display:block;margin-bottom:6px;}
-input[type="number"]{width:100%;padding:12px;font-size:16px;margin-bottom:18px;}
-.form-row{display:flex;align-items:center;gap:14px;padding:12px 10px;margin-bottom:12px;}
-.form-row input{width:22px;height:22px;}
-button{cursor:pointer;min-height:48px;}
-button:focus,a:focus,input:focus{outline:3px solid #27ae60;outline-offset:2px;}
 .service-image{width:100%;max-width:900px;display:block;margin:22px auto;border-radius:6px;}
 .lightbox{display:none;position:fixed;z-index:9999;top:0;left:0;width:100%;height:100%;background:rgba(0,0,0,0.85);align-items:center;justify-content:center;}
-.lightbox img{max-width:95%;max-height:95%;border-radius:6px;box-shadow:0 0 25px #000;}
+.lightbox img{max-width:95%;max-height:95%;border-radius:6px;}
 .lightbox:target{display:flex;}
-.breadcrumbs{font-size:14px;color:#000;margin-bottom:18px;}
 footer{background:#000;color:#fff;text-align:center;padding:26px 15px;margin-top:40px;font-size:14px;}
 footer a{color:#fff;text-decoration:none;padding:8px 12px;display:inline-block;}
 </style>
 
-</script>
-
-<!-- LocalBusiness Schema -->
+<!-- Local Business Schema -->
 <script type="application/ld+json">
 {
 "@context":"https://schema.org",
-"@type": "LocalBusiness",
-"name": "Home Repairs 4U",
-"url": "homerepairs4u.com",
-"logo": "homerepairs4u.com/images/logo.webp",
-"image": "homerepairs4u.com/images/logo.webp", 
-"telephone": "+447735873694",
-"priceRange": "£40-£1800",
-"areaServed": {
-"@type": "GeoCircle",
-"geoMidpoint": {
-"@type": "GeoCoordinates",
-"latitude": 53.56526,
-"longitude": -1.073704
-},
-"geoRadius": "10000"
-},
-"address": {
-"@type": "PostalAddress",
-"addressLocality": "Kirk Sandall",
-"addressRegion": "South Yorkshire",
-"postalCode": "DN3",
-"addressCountry": "GB"
-},
-"openingHours": "Mo-Su 07:00-20:00"
+"@type":"HomeAndConstructionBusiness",
+"name":"Home Repairs 4U",
+"url":"https://homerepairs4u.com/",
+"telephone":"+447735873694",
+"areaServed":[
+{
+"@type":"Place",
+"name":"Kirk Sandall, Doncaster"
+}
+],
+"openingHours":"Mo-Su 07:00-20:00",
+"priceRange":"££"
+}
+</script>
+
+<!-- Breadcrumbs Schema (VALID) -->
+<script type="application/ld+json">
+{
+"@context": "https://schema.org",
+"@type": "BreadcrumbList",
+"itemListElement": [{
+"@type": "ListItem",
+"position": 1,
+"name": "Home",
+"item": "https://homerepairs4u.com/"
+},{
+"@type": "ListItem",
+"position": 2,
+"name": "Guttering Services",
+"item": "https://homerepairs4u.com/services/guttering.html"
+},{
+"@type": "ListItem",
+"position": 3,
+"name": "Kirk Sandall"
+}]
 }
 </script>
 
 <!-- FAQ Schema -->
 <script type="application/ld+json">
 {
-"@context":"https://schema.org",
-"@type":"FAQPage",
-"mainEntity":[
-{
-"@type":"Question",
-"name":"How often should gutters be cleared in Kirk Sandall?",
-"acceptedAnswer":{"@type":"Answer","text":"Most properties benefit from gutter clearing once or twice per year, particularly after autumn and winter when debris builds up quickly."}
-},
-{
-"@type":"Question",
-"name":"Do blocked gutters cause damp problems?",
-"acceptedAnswer":{"@type":"Answer","text":"Yes. Overflowing gutters can allow water to soak into walls, brickwork and foundations, leading to damp patches and long-term damage."}
-},
-{
-"@type":"Question",
-"name":"Do you provide gutter replacement in Kirk Sandall?",
-"acceptedAnswer":{"@type":"Answer","text":"Yes. We repair where possible and offer full gutter replacement when systems are beyond repair, using durable materials designed for long-term reliability."}
+"@context": "https://schema.org",
+"@type": "FAQPage",
+"mainEntity": [{
+"@type": "Question",
+"name": "How often should gutters be cleared in Kirk Sandall?",
+"acceptedAnswer": {
+"@type": "Answer",
+"text": "Most properties in Kirk Sandall benefit from gutter clearing once or twice per year, particularly after autumn when leaves and debris are more likely to collect."
 }
-]
+},{
+"@type": "Question",
+"name": "Do you offer gutter services near me?",
+"acceptedAnswer": {
+"@type": "Answer",
+"text": "Yes. Home Repairs 4U provides local gutter clearing, cleaning and replacement services throughout Kirk Sandall and surrounding Doncaster areas."
 }
-</script>
-
-<!-- Breadcrumb Schema -->
-<script type="application/ld+json">
-{
-"@context":"https://schema.org",
-"@type":"BreadcrumbList",
-"itemListElement":[
-{"@type":"ListItem","position":1,"name":"Home"},
-{"@type":"ListItem","position":2,"name":"Guttering Services"},
-{"@type":"ListItem","position":3,"name":"Kirk Sandall"}
-]
+},{
+"@type": "Question",
+"name": "Can damaged gutters be repaired or do they need replacing?",
+"acceptedAnswer": {
+"@type": "Answer",
+"text": "Minor leaks and loose joints can often be repaired. If guttering is cracked, sagging or beyond repair, replacement is usually the best long-term solution."
+}
+}]
 }
 </script>
 
 </head>
+
 <body>
 
 <header>
-<img src="/images/logo.webp" alt="Home Repairs 4U logo" class="logo" width="600" height="200">
+<img src="/images/logo.webp" alt="Home Repairs 4U logo" class="logo">
 <br>
 <a href="/" style="font-size:20px;font-weight:600;color:#000;">Home</a><br>
 <a href="tel:07735873694" class="call-btn">Call 07735 873694</a>
@@ -120,45 +114,41 @@ footer a{color:#fff;text-decoration:none;padding:8px 12px;display:inline-block;}
 
 <main>
 
-<div class="breadcrumbs">
-Home › Guttering Services › Kirk Sandall
-</div>
-
-<h1>Gutter Services Near Me in Kirk Sandall, Doncaster</h1>
+<h1>Gutter Services in Kirk Sandall, Doncaster</h1>
 
 <p>
-If you’re searching for reliable gutter services near you in Kirk Sandall, Home Repairs 4U provides professional gutter clearing, cleaning, repairs and replacement for residential and small commercial properties. Our local service focuses on protecting homes from water damage, damp issues and unnecessary repair costs caused by blocked or failing guttering.
+If you’re looking for dependable gutter services near you in Kirk Sandall, Home Repairs 4U provides professional solutions designed to protect your home from water damage. Our gutter clearing, cleaning, repair and replacement services help ensure rainwater flows safely away from your property all year round.
 </p>
 
 <p>
-Gutters play a vital role in directing rainwater safely away from your property. When systems become blocked, misaligned or damaged, water can overflow and soak into walls, rooflines and foundations. Over time, this can lead to staining, damp patches, rot and costly structural repairs. Regular maintenance is the most effective way to avoid these issues.
+Gutters play a vital role in protecting brickwork, rooflines and foundations. When they become blocked or damaged, water can overflow and cause damp patches, staining, and long-term structural issues. Our local service in Kirk Sandall focuses on prevention as well as effective repairs.
 </p>
 
-<h2>Instant Gutter Quote Calculator</h2>
+<h2>Instant Gutter Estimate</h2>
 
+<p>
+Use our simple gutter calculator below to get a quick estimate based on the length of guttering on your property. This gives you a clear idea of costs before booking.
+</p>
+
+<!-- Calculator stays unchanged -->
 <form id="quoteForm">
-<label for="metres">Total gutter length (metres)</label>
+<label for="metres"><strong>Total gutter length (metres)</strong></label>
 <input type="number" id="metres" min="1" step="0.1" required>
 
-<div class="form-row">
-<input type="checkbox" id="clearing">
-<label for="clearing">Gutter clearing</label>
+<div>
+<input type="checkbox" id="clearing"> <label for="clearing">Gutter clearing</label>
 </div>
-
-<div class="form-row">
-<input type="checkbox" id="cleaning">
-<label for="cleaning">Gutter cleaning</label>
+<div>
+<input type="checkbox" id="cleaning"> <label for="cleaning">Gutter cleaning</label>
 </div>
-
-<div class="form-row">
-<input type="checkbox" id="replacement">
-<label for="replacement">Gutter replacement</label>
+<div>
+<input type="checkbox" id="replacement"> <label for="replacement">Gutter replacement</label>
 </div>
 
 <button type="button" onclick="calculateQuote()" class="call-btn">Get Estimate</button>
 </form>
 
-<div id="quoteResult" style="margin-top:22px;font-size:18px;font-weight:bold;"></div>
+<div id="quoteResult" style="margin-top:20px;font-size:18px;font-weight:bold;"></div>
 
 <script>
 function calculateQuote(){
@@ -180,36 +170,36 @@ items.length
 
 <h3>Gutter Clearing</h3>
 <p>
-Leaves, moss and debris can accumulate quickly, especially in residential areas with nearby trees. Our gutter clearing service removes blockages to restore proper water flow and reduce the risk of overflow during heavy rainfall.
+Gutter clearing removes leaves, moss and debris that commonly build up on properties in Kirk Sandall. Keeping gutters clear reduces the risk of overflows and protects your walls and roofline during heavy rainfall.
 </p>
 
 <h3>Gutter Cleaning</h3>
 <p>
-External gutter cleaning helps improve kerb appeal while also preventing surface deterioration. Removing algae and grime allows gutters to dry correctly and can extend their usable lifespan.
+External gutter cleaning improves the appearance of your home while helping guttering dry correctly. This can extend the life of the system and reduce staining on fascias and soffits.
 </p>
 
-<h3>Gutter Repairs and Replacement</h3>
+<h3>Gutter Repairs & Replacement</h3>
 <p>
-Small issues such as leaking joints or sagging sections can often be repaired if caught early. Where systems are damaged beyond repair, we offer full gutter replacement using robust materials designed for long-term performance.
+Where guttering is leaking, loose or sagging, repairs may be possible. If the system is beyond repair, we offer full gutter replacement using durable materials designed for long-term performance.
 </p>
 
-<h2>Why Local Gutter Maintenance Matters</h2>
+<h2>Why Choose a Local Gutter Service?</h2>
 
 <p>
-Properties in Kirk Sandall experience a mix of seasonal rainfall and temperature changes that place constant pressure on gutter systems. Regular inspections and maintenance help ensure your property remains protected year-round, reducing the likelihood of sudden leaks or water ingress.
+Using a local gutter service in Kirk Sandall means quicker response times, knowledge of local property styles, and work carried out with care. We regularly work on houses, bungalows and small commercial buildings across Doncaster.
 </p>
 
 <p>
-We also serve surrounding areas including
-<a href="/local/gutter-services-bentley.html">Bentley</a>,
-<a href="/local/gutter-services-askern.html">Askern</a> and
-<a href="/local/gutter-services-darrington.html">Darrington</a>, allowing us to provide prompt local support when needed.
+Our team also provides related exterior services including
+<a href="/services/guttering.html">full guttering services</a>,
+<a href="/services/pressure-washing.html">pressure washing</a>, and
+<a href="/services/upvc-restoration.html">uPVC restoration</a>.
 </p>
 
-<h2>Book Gutter Services in Kirk Sandall</h2>
+<h2>Book Gutter Services Near You</h2>
 
 <p>
-Whether your gutters need clearing, cleaning, repair or full replacement, Home Repairs 4U offers dependable local service you can trust. We focus on practical solutions, clear pricing and workmanship that protects your home.
+If your gutters are overflowing, leaking, or overdue for maintenance, Home Repairs 4U is ready to help. We offer reliable gutter services throughout Kirk Sandall and surrounding Doncaster areas.
 </p>
 
 <div style="text-align:center;margin:36px 0;">
@@ -224,7 +214,6 @@ Whether your gutters need clearing, cleaning, repair or full replacement, Home R
 <a href="/services/guttering.html">Guttering</a>
 <a href="/services/pressure-washing.html">Pressure Washing</a>
 <a href="/services/fence-installation.html">Fencing</a>
-<a href="/services/service-areas.html">Service Areas</a>
 <br>
 <a href="https://www.facebook.com/people/Handyman-services/61584395621256/">Facebook</a>
 </footer>
